--- a/less/style.less
+++ b/less/style.less
@@ -375,6 +375,13 @@ main {
 		.media {
 			margin-top: 3rem;
 			font-size: 1.4rem;
+			&-left {
+				img {
+					width: 7rem;
+					height: 5rem;
+					border-radius: 50%;
+				}
+			}
 			h4 {
 				.bold();
 			}
